--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "Rock-paper-scissors \"fighting game\"",
   "main": "server/server.js",
+  "type": "module",
   "scripts": {
     "start": "node server/server.js"
   },
   "author": "aspyse",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.21.1",
     "websocket": "^1.0.35",
     "ws": "^8.18.0"
   }
